fix bug and add improvements
